--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.24.0",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
+    "react-calendar": "^3.5.0",
+    "react-daypicker": "^3.0.10",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.47.0"
   }
 }
